expert system prompt improvements